# django-elasticsearch-metrics

./: .dockerignore  .flake8  .gitignore  .konchrc  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tasks.py  testbox.Dockerfile  tox.ini
.github/workflows/: test_djelme.yml
elasticsearch_metrics/: __init__.py  apps.py  exceptions.py  factory.py  field.py  metric.py  metrics.py  operations.py  registry.py  signals.py
elasticsearch_metrics/management/: color.py
elasticsearch_metrics/management/commands/: check_metrics.py  show_metrics.py  sync_metrics.py
settings/: __init__.py  defaults.py
tests/: conftest.py  settings.py  test_autodiscovery.py  test_factory.py  test_field.py  test_metrics.py  test_operations.py  test_registry.py
tests/dummyapp/: apps.py  metrics.py
tests/test_management_commands/: test_check_metrics.py  test_show_metrics.py  test_sync_metrics.py
